# homework-py

./: .gitignore  Extensions_to_download.txt  Pipfile  README.md  example.py  frozone.txt  homework.py  icalexport (1).ics  icalexport.ics  pyproject.toml  reasons.md  requirements.txt  test.py
.github/: pull_request_template
.github/workflows/: format_build.yml  release.yml
src/homeworkpy/: __init__.py  __main__.py  example.py  homework.py  renweb_requests.ipynb  tools.py
