[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeworkpy"
version = "1.0.0"
description = "Pythonify Student Planners with classes objects!"
readme = "README.md"
authors = [{ name = "Nathan Solis", email = "airship.magical_0a@icloud.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ICS", "moodle", "homework", "planner"]
dependencies = [
    "recurring-ical-events",
    "requests",
    "icalendar",
    "rich",
    "urllib3==1.26.9"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/colderinit/homework-py"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "CHORE: Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"']
"src/homeworkpy/__init__.py" = ["{version}"]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

